Add new module Announcement
