# src/backend/Modules/Announcements/Scaffold.Announcements/Infrastructure/Persistence/AnnouncementsDbContext.cs
@@ -1,0 +1,17 @@
+using Microsoft.EntityFrameworkCore;
+using Scaffold.Announcements.Domain;
+
+namespace Scaffold.Announcements.Infrastructure.Persistence;
+
+public sealed class AnnouncementsDbContext(DbContextOptions<AnnouncementsDbContext> options) : DbContext(options)
+{
+  public DbSet<Announcement> Announcements => Set<Announcement>();
+
+  protected override void OnModelCreating(ModelBuilder modelBuilder)
+  {
+    modelBuilder.HasDefaultSchema(AnnouncementsModule.Name.ToLowerInvariant());
+    modelBuilder.ApplyConfigurationsFromAssembly(typeof(AnnouncementsDbContext).Assembly);
+
+    base.OnModelCreating(modelBuilder);
+  }
+}
