# src/backend/Modules/Announcements/Scaffold.Announcements/Infrastructure/Persistence/AnnouncementsDbContextFactory.cs
@@ -1,0 +1,19 @@
+using Microsoft.EntityFrameworkCore;
+using Microsoft.EntityFrameworkCore.Design;
+
+namespace Scaffold.Announcements.Infrastructure.Persistence;
+
+public sealed class AnnouncementsDbContextFactory : IDesignTimeDbContextFactory<AnnouncementsDbContext>
+{
+  public AnnouncementsDbContext CreateDbContext(string[] args)
+  {
+    var optionsBuilder = new DbContextOptionsBuilder<AnnouncementsDbContext>();
+
+    optionsBuilder.UseNpgsql(
+        connectionString: "Host=_design-time_;Database=_design-time_",
+        npgsqlOptionsAction: o => o.MigrationsHistoryTable("__EFMigrationsHistory", AnnouncementsModule.Name.ToLowerInvariant())
+    );
+
+    return new AnnouncementsDbContext(optionsBuilder.Options);
+  }
+}
